syntax = "proto3";
package pstake.liquidstakeibc.v1beta1;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "pstake/liquidstakeibc/v1beta1/params.proto";

// this line is used by starport scaffolding # 1

option go_package = "github.com/persistenceOne/pstake-native/v2/x/liquidstakeibc/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/pstake/liquidstakeibc/v1beta1/params";
  }

}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}
